--- a/Rešerše/zdroje.bib
+++ b/Rešerše/zdroje.bib
@@ -95,3 +95,12 @@ year = {2017}
     booktitle = {In ECCV},
     year = {2014}
 }
+
+@article{Engel2018_DSO,
+  title={Direct Sparse Odometry},
+  author={Jakob Engel and Vladlen Koltun and Daniel Cremers},
+  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  year={2018},
+  volume={40},
+  pages={611-625}
+}
