--- a/Rešerše/zdroje.bib
+++ b/Rešerše/zdroje.bib
@@ -104,3 +104,13 @@ year = {2017}
   volume={40},
   pages={611-625}
 }
+
+@InProceedings{LDSO,
+  author = "X. Gao and R. Wang and N. Demmel and D. Cremers",
+  title = "LDSO: Direct Sparse Odometry with Loop Closure",
+  booktitle = "iros",
+  arXiv = "arXiv:1808.01111",
+  year = "2018",
+  month = "October",
+  keywords = {dso, ldso}
+}
