--- a/Rešerše/zdroje.bib
+++ b/Rešerše/zdroje.bib
@@ -114,3 +114,22 @@ year = {2017}
   month = "October",
   keywords = {dso, ldso}
 }
+
+@misc{ROS,
+    author = "{Open Source Robotics Foundation}",
+    title = "Documentation - ROS Wiki",
+    url = "http://wiki.ros.org",
+    howpublished = "\url{http://wiki.ros.org}",
+    note = "[Online]"
+  }
+
+@misc{TUM_datasets,
+    author = "{Technical University of Munich}",
+    title = "Computer Vision Group - Datasets - Monocular Visual Odometry Dataset",
+    url = "https://vision.in.tum.de/data/datasets/mono-dataset",
+    howpublished = "\url{https://vision.in.tum.de/data/datasets/mono-dataset}",
+    note = "[Online]"
+  }  
+  
+  
+
